--- a/Repsitory Coding Prac/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Repsitory Coding Prac/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -7,14 +7,14 @@
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Temp. (C)</th>
-      <th>Temp. (F)</th>
-      <th>Summary</th>
+      <th>Start Date</th>
+      <th>Project Title</th>
+      <th>Funder</th>
+      <th>Project Status</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let forecast of forecasts">
+    <tr *ngFor="let project of projects">
       <td>{{ forecast.date }}</td>
       <td>{{ forecast.temperatureC }}</td>
       <td>{{ forecast.temperatureF }}</td>
