--- a/Repsitory Coding Prac/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Repsitory Coding Prac/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,24 +1,26 @@
-<h1 id="tableLabel">Weather forecast</h1>
+<h1 id="tableLabel">User Projects</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>This component demonstrates fetching project data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading...</em></p>
+<p *ngIf="!projects"><em>Loading...</em></p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts">
+<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="projects">
   <thead>
     <tr>
       <th>Start Date</th>
       <th>Project Title</th>
-      <th>Funder</th>
+      <th>Start Date</th>
+      <th>End Date</th>
       <th>Project Status</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let project of projects">
-      <td>{{ forecast.date }}</td>
-      <td>{{ forecast.temperatureC }}</td>
-      <td>{{ forecast.temperatureF }}</td>
-      <td>{{ forecast.summary }}</td>
+      <td>{{ project.projectId }}</td>
+      <td>{{ project.projectTitle }}</td>
+      <td>{{ project.startDate }}</td>
+      <td>{{ project.endDate }}</td>
+      <td>{{ project.currentStatus }}</td>
     </tr>
   </tbody>
 </table>
